Fixes footer covering up login inputs on mobile landscape view.

--- a/src/scss/components/_login.scss
+++ b/src/scss/components/_login.scss
@@ -1,6 +1,7 @@
 .Section--login {
   padding: 50px 8vw 25px;
   height: 67vh;
+  min-height: 367px;
 
   .FormMessage {
     margin: 25px 0 0;
